# Renderer

./: link.txt
docs/bug/: bug.txt
source/: CMakeLists.txt
source/include/RenderSystem/: Export.h
source/include/comm/: Export.h  TestOpenGLBase.h  camera.h  debugger.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h
source/modules/: comm.cmake
source/resources/shaders/pipeline/: GBuffer_DeferredLight.ps  GBuffer_DeferredLightShader.ps  GBuffer_Geometry.vs  GBuffer_GeometryShader.ps
source/resources/shaders/tests/LearnOpenGL/Shaders/: baseGround.ps  baseGround.vs
source/resources/shaders/tests/LearnOpenGL/Shaders/2.lighting/: 1.color.ps  1.color.vs  1.lamp.vs  2.basic_lighting_diffuse.ps  2.basic_lighting_diffuse.vs  3.1.material.ps  3.basic_lighting_specular.ps  3.basic_lighting_specular.vs  4.1.lighting_map_diffusemap.ps  4.3.lighting_maps_exercise4.ps  5.1.light_casters_directional.ps  5.2.light_casters_point.ps  5.3.light_casters_spot.ps  5.3.light_casters_spot.vs  5.4.light_casters_spot_soft.ps
source/resources/shaders/tests/LearnOpenGL/Shaders/4.advanced_opengl/: 1.1.depth_testing.ps  1.1.depth_testing.vs  1.2.depth_testing.ps  1.2.depth_testing.vs  10.1.Instancing_quads.ps  10.1.Instancing_quads.vs  10.2.Instancing_asteroids.vs  10.2.planet.ps  10.2.planet.vs  11.1.anti_aliasing.ps  11.1.anti_aliasing.vs  11.2.anti_aliasing_offscreen.ps  11.2.anti_aliasing_offscreen.vs  2.1.stencil_tesing_wrap.ps  2.1.stencil_tesing_wrap.vs  2.shaderSingleColor.ps  2.shaderSingleColor.vs  2.stencil_testing.ps  2.stencil_testing.vs  3.1.blend_discard.ps  3.1.blend_discard.vs  3.2.blend_sort.ps  3.2.blend_sort.vs  5.1.framebuffers.ps  5.1.framebuffers.vs  5.1.framebuffers_blur.ps  5.1.framebuffers_edge_detection.ps  5.1.framebuffers_gray.ps  5.1.framebuffers_invert.ps  5.1.framebuffers_sharpen.ps  6.1.cubemap_skybox.vs  6.1.model.ps  6.1.model.vs  8.advanced_glsl_ubo.ps  8.advanced_glsl_ubo.vs  9.1.GeometryShader.ps  9.1.GeometryShader.vs  9.1.GeometryShader_1.gs  9.1.GeometryShader_2.gs  9.2.GeometryShader.ps  (+5 more)
source/resources/shaders/tests/LearnOpenGL/Shaders/5.advanced_lighting/: 1.Blinn_Phong.ps  1.Blinn_Phong.vs  2.gamma_correction.ps  2.gamma_correction.vs  3.1.1.debug.ps  3.1.1.debug.vs  3.1.1.shadow_mapping.debug.vs  3.1.1.shadow_mapping.ps  3.1.1.shadow_mapping_depth.ps  3.1.1.shadow_mapping_depth.vs  4.normal_mapping.ps  4.normal_mapping.vs  5.parallax_mapping.ps  5.parallax_mapping.vs  6.hdr.ps  6.hdr.vs  6.lighting.ps  6.lighting.vs  7.bloom.ps  7.bloom.vs  7.bloomFinal.ps  7.bloomFinal.vs  7.blur.ps  7.blur.vs  7.light.ps  8.deferredRendering.ps  8.deferredRendering.vs  9.ssao.ps  9.ssao.vs
source/resources/shaders/tests/LearnOpenGL/Shaders/6.pbr/: 1.1.lighting.ps  1.1.lighting.vs  1.2.lighting_textured.ps  1.2.lighting_textured.vs  1.2.lighting_textured_orig.ps  1.2.lighting_textured_orig.vs  2.1.1.background.ps  2.1.1.cubemap.ps  2.1.1.ibl_irradiance_conversion.ps  2.1.1.ibl_irradiance_conversion.vs  2.1.2.background.ps  2.1.2.background.vs  2.1.2.cubemap.vs  2.1.2.ibl_irradiance.ps  2.1.2.ibl_irradiance.vs  2.1.2.irradiance_convolution.ps  2.2.1.background.ps  2.2.1.background.vs  2.2.1.ibl_brdf.ps  2.2.1.ibl_brdf.vs  2.2.1.ibl_prefilter.ps  2.2.1.ibl_specular.ps  2.2.1.ibl_specular.vs  2.2.2.ibl_specular_textured.ps  2.2.2.ibl_specular_textured.vs
source/resources/shaders/tests/LearnOpenGL/Shaders/7.practice/: debugApp.ps  debugApp.vs
source/src/Comm/: CMakeLists.txt
source/src/Launcher/: CMakeLists.txt  main.cpp
source/src/RenderSystem/: CMakeLists.txt  Light.cpp  Light.h  LightManger.cpp  LightManger.h  RenderPipeline.cpp  RenderPipeline.h  RenderStage.cpp  RenderStage.h  RenderWindow.cpp  RenderWindow.h  System.cpp  System.h  WindowBase.h
source/src/RenderSystem/effect/: Gbuffer.cpp  Gbuffer.h  OutLine.h
source/src/RenderSystem/scene/: Group.h  Node.cpp  Node.h  QuadGeometry.cpp  QuadGeometry.h  SceneManager.cpp  SceneManager.h  Skybox.h  box.h  plane.h  skyboxData.h
source/src/RenderSystem/utils/: FBO.h
source/src/RenderSystem/window/: GLFWRenderWindow.cpp  GLFWRenderWindow.h  Win32RenderWindow.cpp  Win32RenderWindow.h
source/src/Tests/: CMakeLists.txt
source/src/Tests/LearnOpenGL/: TestOpenGL.cpp
source/src/Tests/LearnOpenGL/2.lighting/: 1.color.cpp  2.basic_lighting_diffuse.cpp  3.1.material.cpp  3.2.material.cpp  3.basic_lighting_specular.cpp  4.1.lighting_map_diffusemap.cpp  4.3.lighting_maps_exercise4.cpp  5.1.light_casters_directional.cpp  5.2.light_casters_point.cpp  5.3.light_casters_spot.cpp  5.4.light_casters_spot_soft.cpp  6.multiple_lights.cpp
source/src/Tests/LearnOpenGL/4.advanced_opengl/: 1.1.depth_testing.cpp  1.2.depth_testing.cpp  10.1.Instancing_quads.cpp  10.2.Instancing_asteroids.cpp  11.1.anti_aliasing.cpp  11.2.anti_aliasing_offscreen.cpp  2.1.stencil_tesing_wrap.cpp  2.stencil_testing.cpp  3.1.blend_discard.cpp  3.2.blend_sort.cpp  5.1.framebuffers.cpp  6.1.cubemap_skybox.cpp  8.advanced_glsl_ubo.cpp  9.1.GeometryShader.cpp  9.1GeometryShader.cpp  9.2.GeometryShader.cpp
source/src/Tests/LearnOpenGL/5.advanced_lighting/: 1.Blinn_Phong.cpp  1.blin_phong.cpp  2.gamma_correction.cpp  3.1.1.shadow_mapping_depth.cpp  4.normal_mapping.cpp  5.parallax_mapping.cpp  6.box.h  6.hdr.cpp  7.bloom.cpp  8.deferredRendering.cpp  9.ssao.cpp
source/src/Tests/LearnOpenGL/6.pbr/: 1.1.lighting.cpp  1.2.lighting_textured.cpp  2.1.1.ibl_irradiance_conversion.cpp  2.1.2.ibl_irradiance.cpp  2.2.1.ibl_specular.cpp  2.2.2.ibl_specular_textured.cpp  link.txt
source/src/Tests/LearnOpenGL/7.practice/: debugApp.cpp
