#$GEN_STATIC_LIB(Comm)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/comm)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/include)
add_library(glad STATIC glad.c )
ADD_LIBRARY(stb_image  STATIC stb_image.cpp)
#TARGET_LINK_LIBRARIES(Comm opengl32)

SET_PROPERTY(TARGET glad PROPERTY FOLDER comm)
SET_PROPERTY(TARGET stb_image PROPERTY FOLDER comm)